--- a/FitHub/FitHub/Repository/RepositoryTableViewCell.xib
+++ b/FitHub/FitHub/Repository/RepositoryTableViewCell.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -34,8 +34,8 @@
                         <color key="textColor" red="0.34509803919999998" green="0.37647058820000001" blue="0.41176470590000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Rnw-GN-SM8">
-                        <rect key="frame" x="16" y="37" width="106" height="14"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Rnw-GN-SM8">
+                        <rect key="frame" x="16" y="37" width="128" height="14"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iul-TH-e6P">
                                 <rect key="frame" x="0.0" y="0.0" width="34" height="14"/>
@@ -43,18 +43,20 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ezr-g2-k2i">
-                                <rect key="frame" x="39" y="0.0" width="31" height="14"/>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Nt-rs-TVW" userLabel="Star Button">
+                                <rect key="frame" x="44" y="0.0" width="37" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3u-bt-GmR">
-                                <rect key="frame" x="75" y="0.0" width="31" height="14"/>
+                                <state key="normal" title="123" image="star">
+                                    <color key="titleColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5XO-w2-0Dn" userLabel="Fork Button">
+                                <rect key="frame" x="91" y="0.0" width="37" height="14"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <state key="normal" title="123" image="fork">
+                                    <color key="titleColor" red="0.2666666667" green="0.2666666667" blue="0.2666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="4uj-pC-2W0"/>
@@ -75,12 +77,16 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="desLabel" destination="DkP-qw-1X4" id="Igw-KT-Zf3"/>
-                <outlet property="forkLabel" destination="f3u-bt-GmR" id="hiL-pp-ZyU"/>
+                <outlet property="forkButton" destination="5XO-w2-0Dn" id="SNC-Do-nAn"/>
                 <outlet property="languageLabel" destination="iul-TH-e6P" id="GIa-nn-0fe"/>
                 <outlet property="nameLabel" destination="cMp-a4-mEP" id="kfe-a2-E1E"/>
-                <outlet property="starLabel" destination="Ezr-g2-k2i" id="1nc-dt-ajJ"/>
+                <outlet property="starButton" destination="9Nt-rs-TVW" id="Upy-RX-dsf"/>
             </connections>
-            <point key="canvasLocation" x="1663" y="-91"/>
+            <point key="canvasLocation" x="1671" y="-153"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="fork" width="16" height="16"/>
+        <image name="star" width="16" height="16"/>
+    </resources>
 </document>
